feat: arrumada algumas coisas sobre estilizacao e ttextos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <img src="vinyl.png" alt="Vinyl design" />
           <img src="draw-article.png" alt="Magazine design" />
           <img src="book-case.png" alt="Book cover design" />
-          <img src="book-case.png" alt="Burger King Halloween campaign" />
+          <img src="halloween.png" alt="Burger King Halloween campaign" />
         </div>
       </section>
 
@@ -64,22 +64,22 @@
       <section class="steps">
         <div class="step-box">
           <h2>3 steps process</h2>
-          <div>
+          <div class="step-text-box">
             <h3>Onboard</h3>
-            <p>
+            <p class="step-text">
               This is where our collaboration begins. I take the time to
               understand your vision, goals, and the story behind your brand or
               project...
             </p>
 
             <h3>Creation Process</h3>
-            <p>
+            <p class="step-text">
               With a clear vision in mind, I move into the design
               phase—sketching concepts, refining layouts, choosing typefaces...
             </p>
 
             <h3>Delivery</h3>
-            <p>
+            <p class="step-text">
               After polishing the final design, I prepare all the necessary
               files and formats for a smooth hand-off...
             </p>
@@ -89,26 +89,31 @@
 
       <section id="about" class="about-me">
         <h2>About me</h2>
+
         <div class="about-content">
           <div class="text">
             <h3>From Brazil to the World</h3>
             <p>
-              I'm a Brazilian creative with a passion for design, drawing, and
-              bringing ideas to life. I graduated in Marketing and Social Media
-              at Greystone College and further expanded my skills in Web Design
-              at Humber College...
+              I'm a Brazilian creative with a passion for design, drawing, and bringing ideas to life. I graduated in Marketing and Social Media at Greystone College and further expanded my skills in Web Design at Humber College. 
+            </p>
+            <p>
+              My work is driven by imagination, purpose, and a love for visual storytelling. Currently, I also volunteer with the Media Team at Lagoinha Toronto Church, where I continue to explore and grow my creative talents in a community I love.
             </p>
           </div>
           <img src="annie-photo.png" alt="Annie Beatrizti photo" />
         </div>
+
       </section>
 
       <section id="contact" class="contact">
+        <h2>Contact me</h2>
+        <div class="contact-content">
         <a href="mailto:anniebeatrizti@gmail.com" class="button">Contact me</a>
         <div class="info">
           <p><strong>Phone:</strong> +1 (437) 263-5368</p>
           <p><strong>Email:</strong> anniebeatrizti@gmail.com</p>
         </div>
+      </div>
       </section>
     </main>
 
