--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
-
+    
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -41,15 +41,27 @@
       <section class="showcase">
         <h2>Showcase</h2>
         <div class="gallery">
-          <img src="vinyl.png" alt="Vinyl design" />
-          <img src="draw-article.png" alt="Magazine design" />
-          <img src="book-case.png" alt="Book cover design" />
-          <img src="halloween.png" alt="Burger King Halloween campaign" />
+          <button class="project-btn" data-title="Vinyl Design" data-description="This work is all about creating a vinyl album cover and doing some mock-ups.
+          The album couldn't be about a famous artist, so I made it as if was mine album!!
+          ">
+            <img src="vinyl.png" alt="Vinyl design" />
+          </button>
+          <button class="project-btn" data-title="draw-article" data-description="Create a simple, original vector illustration in Adobe Illustrator to accompany an article about burnout. The style should be clean and modern, matching the tone of the article. The image should highlight the main idea and engage readers.">
+            <img src="draw-article.png" alt="Magazine design" />
+          </button>
+          <button class="project-btn" data-title="Book Cover Design" data-description="Redesign an existing book cover using Adobe Photoshop. The goal is to modernize the design while keeping the essence of the original content. The new cover should be visually appealing, suitable for print and digital formats, and reflect the book's theme.">
+            <img src="book-case.png" alt="Book cover design" />
+          </button>
+          <button class="project-btn" data-title="Burger King Halloween Campaign" data-description="For this project we were challenged to make an ad for a magazine, launching a campaign. I chose Burger King as a brand to work with, and a campaign was about the Halloween with the idea to sell a special menu, which the brand does every year.
+          The art was based on creating a goof movie poster, been fun!">
+            <img src="halloween.png" alt="Burger King Halloween campaign" />
+          </button>
         </div>
       </section>
 
       <section class="my-work">
         <h2>My work</h2>
+        <span class="line"></span>
         <p>
           My design style blends elegance and creativity, with a deep
           appreciation for the beauty of simplicity. I gravitate toward refined
@@ -62,6 +74,7 @@
       </section>
 
       <section class="steps">
+
         <div class="step-box">
           <h2>3 steps process</h2>
           <div class="step-text-box">
@@ -117,6 +130,15 @@
       </section>
     </main>
 
+    <div class="modal" id="project-modal">
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <img id="modal-image" src="" alt="" />
+        <h3 id="modal-title"></h3>
+        <p id="modal-description"></p>
+      </div>
+    </div>
+
     <script>
         const toggle = document.getElementById('menu-toggle');
         const nav = document.querySelector('nav');
@@ -136,6 +158,35 @@
           } else {
             nav.style.display = 'flex';
             nav.classList.add('show');
+          }
+        });
+
+        // Modal functionality
+        const modal = document.getElementById('project-modal');
+        const modalImage = document.getElementById('modal-image');
+        const modalTitle = document.getElementById('modal-title');
+        const modalDescription = document.getElementById('modal-description');
+        const closeModal = document.querySelector('.close-modal');
+        const projectButtons = document.querySelectorAll('.project-btn');
+
+        projectButtons.forEach(button => {
+          button.addEventListener('click', () => {
+            const img = button.querySelector('img');
+            modalImage.src = img.src;
+            modalImage.alt = img.alt;
+            modalTitle.textContent = button.dataset.title;
+            modalDescription.textContent = button.dataset.description;
+            modal.style.display = 'block';
+          });
+        });
+
+        closeModal.addEventListener('click', () => {
+          modal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+          if (event.target === modal) {
+            modal.style.display = 'none';
           }
         });
       </script>      
